# echo_bots

./: .env.example  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-image.yml
src/echo_bots/api/: main.py
src/echo_bots/conf/: config.yaml
src/echo_bots/db/: database.py
src/telegram_bot/: app.py  main.py  models.py
src/telegram_bot/api/: main.py  telegram.py
src/telegram_bot/conf/: config.yaml
src/telegram_bot/db/: database.py
